# KOSCH

./: .clang-format  README.md
driver/: build.bat
driver/src/: aimbot.c  aimbot.h  dispatch.c  dispatch.h  dkom.c  dkom.h  entry.c  globals.c  globals.h  memory.c  memory.h  mouse.c  mouse.h  ntdefs.h  offsets.c  offsets.h  stealth.c  stealth.h  sysinfo.c  sysinfo.h
loader/: CMakeLists.txt
loader/src/: cleanup.c  cleanup.h  constants.h  crypt.h  gate.c  gate.h  krw.c  krw.h  log.h  main.c  mapper.c  mapper.h  nt_defs.h  pe.c  pe.h  peb.c  peb.h  resolve.c  resolve.h  shellcode.h  svc.c  svc.h  sysinfo.c  sysinfo.h  tbt.c  tbt.h  tbt_sys.h  test.c  test.h  types.h  xor.h
loader/tools/: bin2h.py  fnv1a.py  xorstr.py
